--- a/styles/mindmap.css
+++ b/styles/mindmap.css
@@ -20,3 +20,15 @@ svg#mindmap {
 .markmap-link {
   fill: none;
 }
+
+.save-diagram-button {
+  font-size: 12px;
+  color: #000;
+  padding: 1px 4px 1px 4px;
+  border-radius: 4px;
+  background-color: gainsboro;
+  cursor: pointer;
+}
+.save-diagram-button:hover {
+  background-color: cornsilk;
+}
